corrected spacing issues in admin page.
menu no longer appears on login screen.

--- a/themes/bootstrap/assets/css/style.css
+++ b/themes/bootstrap/assets/css/style.css
@@ -142,6 +142,10 @@ pre,code {
         ADMIN PAGE
 
 ==========================*/
+#location_details .submitAnchorTopForm{
+    margin-bottom:10px;
+}
+
 .required{
     font-weight: bold;
     color:#d00;
